# ginkgo

./: .gitlab-ci.yml  CMakeLists.txt  README.md
benchmark/utils/: cuda_linops.hpp  hip_linops.hip.hpp  overhead_linop.hpp
cmake/: get_info.cmake
common/matrix/: csr_kernels.hpp.inc
common/solver/: idr_kernels.hpp.inc
core/: CMakeLists.txt
core/base/: combination.cpp  composition.cpp  perturbation.cpp
core/device_hooks/: common_kernels.inc.cpp
core/matrix/: coo.cpp  csr.cpp  csr_kernels.hpp  dense.cpp  dense_kernels.hpp  diagonal.cpp  ell.cpp  hybrid.cpp  identity.cpp  permutation.cpp  sellp.cpp  sparsity_csr.cpp
core/multigrid/: amgx_pgm.cpp
core/solver/: bicg.cpp  bicgstab.cpp  cg.cpp  cgs.cpp  fcg.cpp  gmres.cpp  idr.cpp  ir.cpp  lower_trs.cpp  upper_trs.cpp
cuda/: CMakeLists.txt
cuda/matrix/: csr_kernels.cu  dense_kernels.cu
cuda/solver/: idr_kernels.cu
examples/: CMakeLists.txt
examples/adaptiveprecision-blockjacobi/: adaptiveprecision-blockjacobi.cpp
examples/custom-logger/: custom-logger.cpp
examples/custom-matrix-format/: custom-matrix-format.cpp
examples/custom-stopping-criterion/: custom-stopping-criterion.cpp
examples/ir-ilu-preconditioned-solver/: ir-ilu-preconditioned-solver.cpp
examples/iterative-refinement/: iterative-refinement.cpp
examples/papi-logging/: papi-logging.cpp
examples/performance-debugging/: performance-debugging.cpp
examples/simple-solver-logging/: simple-solver-logging.cpp
hip/: CMakeLists.txt
hip/matrix/: csr_kernels.hip.cpp  dense_kernels.hip.cpp
hip/solver/: idr_kernels.hip.cpp
include/ginkgo/: ginkgo.hpp
omp/: CMakeLists.txt
omp/matrix/: csr_kernels.cpp  dense_kernels.cpp
omp/solver/: idr_kernels.cpp
reference/: CMakeLists.txt
(+48 files in other folders)
